feat: error popup for input that are not accepted

--- a/src/index.html
+++ b/src/index.html
@@ -207,6 +207,10 @@
                                     name="logihub-import-paste"
                                 ></textarea>
                             </div>
+                            <div
+                                class="error-popup"
+                                id="logihub-import-error"
+                            ></div>
                             <div id="logihub-import-button-group">
                                 <button
                                     class="accent"
@@ -243,6 +247,10 @@
                                     name="amount"
                                     min="0"
                                 />
+                                <div
+                                    class="error-popup"
+                                    id="manual-import-error"
+                                ></div>
                                 <button class="accent" id="submit-item-button">
                                     Submit
                                 </button>
