allow user to select a fill_level instead of forced to custom

--- a/src/index.html
+++ b/src/index.html
@@ -235,6 +235,14 @@
                                         High Priority
                                     </option>
                                 </select>
+                                <label for="current-fill-level"
+                                    >Current Fill Level:</label
+                                >
+                                <select id="current-fill-level">
+                                    <option value="critical">Critical</option>
+                                    <option value="low">Low</option>
+                                    <option value="okayish">Okay-ish</option>
+                                </select>
                                 <label for="amount">Amount:</label>
                                 <input
                                     id="amount"
