add material usage to end screen

--- a/src/index.html
+++ b/src/index.html
@@ -412,6 +412,24 @@
                         <div class="item-description">crates manufactured</div>
                     </div>
                 </div>
+                <div id="result-material" class="table">
+                    <div class="table-item">
+                        <div class="item-value" id="result-bmat-used"></div>
+                        <div class="item-description">bmat consumed</div>
+                    </div>
+                    <div class="table-item">
+                        <div class="item-value" id="result-emat-used"></div>
+                        <div class="item-description">emat consumed</div>
+                    </div>
+                    <div class="table-item">
+                        <div class="item-value" id="result-hemat-used"></div>
+                        <div class="item-description">hemat consumed</div>
+                    </div>
+                    <div class="table-item">
+                        <div class="item-value" id="result-rmat-used"></div>
+                        <div class="item-description">rmat consumed</div>
+                    </div>
+                </div>
                 <div class="result-hd">Crates Made</div>
                 <div id="result-item-crafted"></div>
             </div>
