showing container equivalent on result screen

--- a/src/index.html
+++ b/src/index.html
@@ -402,7 +402,7 @@
                 </div>
             </div>
             <div id="result-view" class="hidden">
-                <div class="table" id="result-table">
+                <div class="table">
                     <div class="table-item">
                         <div class="item-value" id="result-time"></div>
                         <div class="item-description">spent manufacturing</div>
@@ -412,7 +412,18 @@
                         <div class="item-description">crates manufactured</div>
                     </div>
                 </div>
-                <div id="result-material" class="table">
+                <div class="table">
+                    <div class="table-item">
+                        <div
+                            class="item-value"
+                            id="result-container-equivalent"
+                        >
+                            4.5 trains
+                        </div>
+                        <div class="item-description">worth of crates!</div>
+                    </div>
+                </div>
+                <div class="table">
                     <div class="table-item">
                         <div class="item-value" id="result-bmat-used"></div>
                         <div class="item-description">bmat consumed</div>
