fix: removing all data reset; now require multiple action in Import/Export to reset

--- a/src/index.html
+++ b/src/index.html
@@ -84,12 +84,19 @@
                                 id="stat-export-data-output"
                                 readonly
                             ></textarea>
+                            <label for="stat-reset-data-output"
+                                >If you want to reset your data, use this
+                                instead:</label
+                            >
+                            <textarea
+                                id="stat-reset-data-output"
+                                readonly
+                            ></textarea>
                         </div>
                     </div>
                 </div>
                 <div id="stat-button-group" class="group">
                     <button id="import-export-stat">Import/Export Data</button>
-                    <button id="stat-reset">Reset Statistics</button>
                 </div>
                 <h2 class="stat-header">Lifetime Statistics</h2>
                 <div class="table stat-basic">
