feat: allow resetting current war stat

--- a/src/index.html
+++ b/src/index.html
@@ -95,7 +95,7 @@
                         </div>
                     </div>
                 </div>
-                <div id="stat-button-group" class="group">
+                <div class="stat-button-group group">
                     <button id="import-export-stat">Import/Export Data</button>
                 </div>
                 <h2 class="stat-header">Lifetime Statistics</h2>
@@ -137,6 +137,11 @@
                     </div>
                 </div>
                 <h2 class="stat-header">Current War Statistics</h2>
+                <div class="stat-button-group group">
+                    <button id="stat-reset-current-war">
+                        Reset Current War Stat
+                    </button>
+                </div>
                 <div class="table stat-basic">
                     <div class="table-item">
                         <div class="item-value" id="stat-war-crate-count"></div>
