--- a/src/index.html
+++ b/src/index.html
@@ -534,7 +534,9 @@
                         <div class="item-description">rmat consumed</div>
                     </div>
                 </div>
-                <div class="result-hd">Achievements Unlocked</div>
+                <div id="result-achievements-hd" class="result-hd">
+                    Achievements Unlocked
+                </div>
                 <div id="result-achievements-unlocked" class="table"></div>
                 <div class="result-hd">Crates Made</div>
                 <div id="result-item-crafted"></div>
