feat: shockbot export

--- a/src/index.html
+++ b/src/index.html
@@ -537,6 +537,11 @@
                 <div id="result-achievements-hd" class="result-hd">
                     Achievements Unlocked
                 </div>
+                <div class="result-hd">Shockbot Export</div>
+                <label for="result-shockbot-export"
+                    >Use this to import the manu result to Shockbot</label
+                >
+                <textarea id="result-shockbot-export" readonly></textarea>
                 <div id="result-achievements-unlocked" class="table"></div>
                 <div class="result-hd">Crates Made</div>
                 <div id="result-item-crafted"></div>
